2009-03-13  higepon  <higepon@users.sourceforge.jp>

        * CustomTextualInputPort.cpp : Added not implemented.

        * CustomBinaryInputOutputPort.cpp : Added <custom-binary-input/output-port>.

        * ErrorProcedures.cpp : Fixed the bug of &i/o-encoding arguments error.

2009-03-12  higepon  <higepon@users.sourceforge.jp>

        * Fixed the bug: Loading serialized librararies causes overwriting corrent label binding value.
          See compat.ss and http://wiki.monaos.org/pukiwiki.php?Mosh%2FBugs%2Fserialize-library%2Fdebug

2009-03-12  kokosabu  <kokosabu@gmail.com>

        * PortProcedures.cpp : Added put-char.

2009-03-11  higepon  <higepon@users.sourceforge.jp>

        * read.cpp (read_char): u_int32_t => uint32_t. (Thanks to antonio.vieiro).

2009-03-10  higepon  <higepon@users.sourceforge.jp>

        * <string-port> returns native-transcoder.

2009-03-09  higepon  <higepon@users.sourceforge.jp>

        * i/o-read and i/o-write can be raised.

        * open-xxx can raise i/o-file-is-read-only and i/o-file-protection.

        * PortProcedures.cpp : (set-port-position! port position) can raise i/o-invalid-position-error.

        * doc/html/images : Added for documents.

        * We found a bug on serialize-library, we will fix it later.

        * scripts/scmc2fasl.scm (main): Added sanity-check.

        * scripts/binary2c.scm : Set (buffer-mode none). We may have buffering problem.

2009-03-08  kokosabu  <kokosabu@gmail.com>

        * Passed all of file-options pattern tests for output-port.

2009-03-07  higepon  <higepon@users.sourceforge.jp>

        * UTF8Codec.cpp (in): Now (utf-16-codec) raises &i/o-decoding.

        * Added time macro to (mosh) library.

        * bench/run-mosh.scm: Added. Thanks to naoya_t.

        * UtilityProcedures.cpp : Added time-usage. Thanks to naoya_t.

        * lib/mosh/process.ss : Added time macro. Thanks to naoya_t.

        * UTF8Codec.cpp (in): Now (utf-8-codec) raises &i/o-decoding.
